--- a/src/less/main.less
+++ b/src/less/main.less
@@ -99,6 +99,7 @@ body {
 //---------------------------------------------  LOGO blocks
 .shop-logo {
     width: 110px;
+    cursor: pointer;
 }
 
 .oggetto-logo {
@@ -300,6 +301,7 @@ body {
         line-height: 50px;
         text-align: center;
         text-transform: uppercase;
+        cursor: pointer;
 
         @media @tablet-strict {
             display: block;
@@ -329,6 +331,7 @@ body {
         color: white;
         background-color: red;
         margin-top: 20px;
+        cursor: pointer;
 
         @media @desktop {
             margin-top: 0;
@@ -339,6 +342,7 @@ body {
         text-decoration: underline;
         color: grey;
         margin: 25px 0;
+        cursor: pointer;
     }
 
     &__heart {
