Change styles according to the mobile first method

--- a/src/less/media.less
+++ b/src/less/media.less
@@ -15,7 +15,7 @@
 
 /* # Variables for mobile first approach and strict ranges */
 @phone: ~'only screen and (min-width: @{xs-min})';
-@phone-strict: ~'only screen and (min-width: @{xs-min}) and (max-width: @{xs-max})';
+@phone-strict: ~'only screen and (max-width: @{xs-max})';
 
 @tablet: ~'only screen and (min-width: @{sm-min})';
 @tablet-strict: ~'only screen and (min-width: @{sm-min}) and (max-width: @{sm-max})';
