--- a/src/less/main.less
+++ b/src/less/main.less
@@ -47,18 +47,16 @@ body {
 
 .list-item {
     padding-right: 15px;
-    font-size: 14px;
+    font-size: 12px;
 
-    @media @phone-strict {
-        font-size: 12px;
+    @media @tablet {
+        font-size: 14px;
     }
 }
 
 .container-fluid {
-    @media @phone {
-        margin: 0 20px;
-        overflow: hidden;
-    }
+    margin: 0 20px;
+    overflow: hidden;
 
     @media @large {
         margin: 0 100px;
@@ -86,13 +84,13 @@ body {
 //---------------------------------------------  PHONE block
 .phone {
     display: block;
-    font-size: 24px;
+    font-size: 17px;
     font-weight: bold;
     color: #ba0000;
     text-decoration: none;
 
-    @media @phone-strict {
-        font-size: 17px;
+    @media @tablet {
+        font-size: 24px;
     }
 }
 
@@ -107,17 +105,21 @@ body {
 
 //---------------------------------------------  HEADER block
 .header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+    display: block;
     padding: 15px 0;
     height: 50px;
 
-    @media @phone-strict {
-        display: block;
+    &__oggetto-link {
+        float: right;
+    }
+
+    @media @tablet {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
 
         &__oggetto-link {
-            float: right;
+            float: none;
         }
     }
 }
@@ -128,11 +130,11 @@ body {
     position: relative;
     width: 0;
     margin: 0 auto;
-    display: none;
+    display: block;
     height: 50px;
 
-    @media @phone-strict {
-        display: block;
+    @media @tablet {
+        display: none;
     }
 }
 
@@ -267,16 +269,17 @@ body {
 
     &__image {
         &:extend(.left-on-desktop);
-        width: 50%;
+        width: 75%;
+        margin: 0 auto;
+        display: block;
 
-        @media @tablet-strict {
+        @media @tablet {
             width: ~'calc(100% - 200px)';
+            margin: 0;
         }
 
-        @media @phone-strict {
-            width: 75%;
-            margin: 0 auto;
-            display: block;
+        @media @desktop {
+            width: 50%;
         }
     }
 
@@ -359,12 +362,12 @@ body {
     &__info {
         &:extend(.right-on-desktop);
 
-        @media @desktop {
-            width: 45%;
+        @media @tablet {
+            width: ~'calc(100% - 200px)';
         }
 
-        @media @tablet-strict {
-            width: ~'calc(100% - 200px)';
+        @media @desktop {
+            width: 45%;
         }
     }
 
@@ -386,10 +389,10 @@ body {
 .copyright {
     border-top: 1px solid @nav-border;
     padding: 30px 0 65px;
-    font-size: 14px;
+    font-size: 12px;
 
-    @media @phone-strict {
-        font-size: 12px;
+    @media @tablet {
+        font-size: 14px;
     }
 }
 
@@ -426,12 +429,12 @@ body {
     .service{
         flex-basis: 330px;
 
-        @media @desktop {
-            flex-grow: 2;
-        }
-
         @media @tablet-strict {
             flex-basis: 50%;
+        }
+
+        @media @desktop {
+            flex-grow: 2;
         }
     }
 
@@ -448,10 +451,6 @@ body {
             margin-top: 0;
             flex-grow: 16;
             flex-basis: 350px;
-        }
-
-        @media @phone-strict {
-            flex-basis: 100%;
         }
     }
 }
